<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opensourcebim.levelout</groupId>
	<artifactId>LevelOutPlugins</artifactId>
	<version>0.2-SNAPSHOT</version>
	<name>LevelOutSerializers</name>
	<organization>
		<name>Bauhaus-Universität Weimar</name>
		<url>https://www.uni-weimar.de</url>
	</organization>
	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
	</properties>
	<build>
		<resources>
			<resource>
				<targetPath>plugin</targetPath>
				<directory>plugin</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>topobyte</id>
			<name>TopoByte</name>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<repository>
			<id>slimjars</id>
			<name>SlimJars</name>
			<url>https://mvn.slimjars.com</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.opensourcebim</groupId>
			<artifactId>shared</artifactId>
			<version>1.5.182</version>
		</dependency>
		<!-- TODO: use JAXB 2 maven plugin to generate or install in local repo,
			now taken from https://github.com/STEMLab/InFactory lib -->
		<dependency>
			<groupId>org.jvnet.ogc</groupId>
			<artifactId>gml-v_3_2_1</artifactId>
			<version>2.6.2-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/gml-v_3_2_1-2.6.2-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jvnet.ogc</groupId>
			<artifactId>indoorgml-v_1_0</artifactId>
			<version>2.6.2-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/indoorgml-v_1_0-2.6.2-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-xml</artifactId>
			<version>0.1.3</version>
		</dependency>
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-geometry</artifactId>
			<version>0.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.slimjars.trove4j</groupId>
			<artifactId>trove4j-long-array-list</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.citygml4j</groupId>
			<artifactId>citygml4j-xml</artifactId>
			<version>3.0.0-rc.4</version>
		</dependency>
		<!-- dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
			<version>2.3.3</version> </dependency -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.2</version>
		</dependency>

		<!-- Runtime, com.sun.xml.bind module -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jvnet.jaxb2_commons</groupId>
			<artifactId>jaxb2-basics</artifactId>
			<version>1.11.1</version>
		</dependency>

		<dependency>
			<groupId>org.hisrc.w3c</groupId>
			<artifactId>xlink-v_1_0</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
	<groupId>com.google.guava</groupId>
	<artifactId>guava</artifactId>
	<version>31.1-jre</version>
</dependency>
<!-- Thanks for using https://jar-download.com -->

		<!-- https://mvnrepository.com/artifact/org.wololo/jts2geojson -->
		<!--   dependency>
			<groupId>org.wololo</groupId>
			<artifactId>jts2geojson</artifactId>
			<version>0.17.0</version>
		</dependency -->

	</dependencies>

</project>